Fix: prevent saved view widgets cut off on mobile

--- a/src-ui/src/app/components/dashboard/widgets/saved-view-widget/saved-view-widget.component.scss
+++ b/src-ui/src/app/components/dashboard/widgets/saved-view-widget/saved-view-widget.component.scss
@@ -6,7 +6,7 @@
 }
 
 .show {
-  max-height: 1000px;
+  max-height: 99999px;
   overflow: visible;
 }
 
